--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ fonttools==4.56.0
 fsspec==2025.3.0
 gast==0.6.0
 google-pasta==0.2.0
+gunicorn
 grpcio==1.71.0
 h5py==3.13.0
 huggingface-hub==0.29.3
